--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" href="https://www.pokemondb.net/" target="_blank" style="font-size: large;">PokémonDB</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="https://www.bulbapedia.bulbagarden.net/" target="_blank" style="font-size: large;">Bulbapedia</a>
+                            <a class="nav-link text-dark" href="http://bulbapedia.bulbagarden.net" target="_blank" style="font-size: large;">Bulbapedia</a>
                         </li>
                     </ul>
                     
@@ -109,12 +109,12 @@
                     <div class="col-lg-4 mb-4 mb-lg-0 text-center">
                         <a class="text-decoration-none me-3 text-dark" href="https://www.serebii.net/" target="_blank">Serebii</a>
                         <a class="text-decoration-none me-3 text-dark" href="https://www.pokemondb.net/" target="_blank">PokémonDB</a>
-                        <a class="text-decoration-none me-3 text-dark" href="https://www.bulbapedia.bulbagarden.net/" target="_blank">Bulbapedia</a>
+                        <a class="text-decoration-none me-3 text-dark" href="http://bulbapedia.bulbagarden.net" target="_blank">Bulbapedia</a>
                         <a class="text-decoration-none text-dark" href="https://www.carterclifton.ca/" target="_blank">carterclifton.ca</a>
                     </div>
 
                     <div class="col-lg-4 text-lg-end text-center">
-                        v2.0.1
+                        v2.0.2
                     </div>
 
                 </div>
