--- a/pokemontracker/pokemontracker.html
+++ b/pokemontracker/pokemontracker.html
@@ -28,8 +28,9 @@
             <option value="galar">Galar</option>
             <option value="hisui">Hisui</option>
             <option value="paldea">Paldea</option>
-        <!-- Future: add Johto, Hoenn, etc. -->
+            <option value="all">Show All</option>
         </select>
+        
 
     </div>
 
